# deadlock-mod-manager

./: .coderabbit.yaml  .dockerignore  .env.example  .envrc  .gitignore  .npmrc  .nvmrc  .oxfmtrc.json  .oxlintrc.json  .todo  AGENTS.md  AI_POLICY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOWNLOAD_ARCHITECTURE_COMPARISON.md  DOWNLOAD_MANAGER_REFACTOR_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_PLAN.md  README.de.md  README.fr.md  README.md  SECURITY.md  biome.jsonc  compose.yml  crowdin.yml  env.example  flake.nix  languages.json  lefthook.yml  netlify.toml  package.json  package.nix  pnpm  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  turbo.json
apps/desktop/: .eslintrc.cjs  .gitignore  .prettierrc  CHANGELOG.md  Cargo.toml  I18N_IMPLEMENTATION.md  components.json  index.html  package.json  pnpm.cmd  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/flatpak/: .gitignore  dev.stormix.deadlock-mod-manager.cef.yml  dev.stormix.deadlock-mod-manager.desktop  dev.stormix.deadlock-mod-manager.yml  zypak-wrapper.sh
apps/desktop/patches/: disable-mods.patch.json  enable-mods.patch.json
apps/desktop/public/locales/de/: translation.json
apps/desktop/public/locales/en/: translation.json
apps/desktop/public/locales/fr/: translation.json
apps/desktop/scripts/: cef-patch.ts  generate-gameinfo-patches.ts  ota-upload.ts
apps/desktop/src/: App.tsx  app.tsx  index.css  layout.tsx  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  dev.stormix.deadlock-mod-manager.metainfo.xml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_runtime.rs  cli.rs  commands.rs  deep_link.rs  discord_rpc.rs  dropped_mod_file.rs  errors.rs  flatpak.rs  game_presence.rs  hero_detector.rs  lib.rs  main.rs  mod_manager.rs  proxy.rs  reports.rs  updater_channel.rs  utils.rs  utils_linux.rs
apps/desktop/src-tauri/src/commands/: app.rs  archive.rs  auth.rs  autoexec.rs  backups.rs  deep_link.rs  downloads.rs  folders.rs  fonts.rs  foundry.rs  game.rs  gameinfo.rs  ingest.rs  logs.rs  match_sync.rs  mod.rs  mods.rs  profiles.rs  reports.rs  server_profiles.rs  state.rs  vpk.rs
apps/desktop/src-tauri/src/download_manager/: downloader.rs  mod.rs
apps/desktop/src-tauri/src/game_state_watcher/: hero_data.rs  log_parser.rs  mod.rs  patterns.rs  presence_builder.rs  state.rs  watcher.rs
apps/desktop/src-tauri/src/ingest_tool/: error.rs  ingestion_cache.rs  mod.rs  scan_cache.rs  utils.rs
apps/desktop/src-tauri/src/logs/: crash_dumps.rs  log_manager.rs  mod.rs
apps/desktop/src-tauri/src/match_sync/: api_client.rs  auth.rs  error.rs  game_check.rs  gc_client.rs  mod.rs  model.rs  quota.rs  settings.rs  sync.rs  throttle.rs
apps/desktop/src-tauri/src/mod_manager/: mod.rs  (+22 more)
apps/desktop/src/components/: about-dialog.tsx  add-setting.tsx  app-sidebar.tsx  audio-player-preview.tsx  category-filter.tsx  date-display.tsx  download-card.tsx  error-boundary.tsx  file-selector-dialog.tsx  filters-dropdown.tsx  flashbang-toggle.tsx  game-presence-renderer.tsx  gameinfo-management.tsx  global-audio-player.tsx  global-plugin-renderer.tsx  hero-filter.tsx  install-with-collection.tsx  installed-files-display.tsx  language-settings.tsx  logo.tsx  match-sync-renderer.tsx  menu-mode-toggle.tsx  menu.tsx  mod-card.tsx  mod-metadata-form.tsx  mod-status-icon.tsx  multi-file-download-dialog.tsx  nsfw-blur.tsx  outdated-mod-warning.tsx  page-title.tsx  privacy-settings.tsx  profile.tsx  progress-indicator.tsx  seach-bar.tsx  search-bar.tsx  section.tsx  setting-card.tsx  sidebar-collapse.tsx  status.tsx  system-settings.tsx  (+5 more)
apps/desktop/src/contexts/: analytics-context.tsx  scroll-back-button-context.tsx
apps/desktop/src/hooks/: telemetry.ts  use-about.ts  use-addon-analysis.ts  use-analytics-events.ts  use-analytics.ts  use-api-status.ts  use-audio.ts  use-auth-status.ts  use-auth.ts  use-auto-update.ts  use-autoexec-library-filter.ts  use-batch-update.ts  use-check-for-updates.ts  use-check-updates.ts  use-create-report.ts  use-crosshair-config-reconciliation.ts  use-crosshair-search.ts  use-debounced-value.ts  use-deep-link.ts  use-disable-all-mods.ts  use-download.ts  use-downloads-migration.ts  use-feature-flags.ts  use-featured-mod.test.ts  use-featured-mod.ts  use-file-drop.ts  use-fileservers.ts  use-filesystem-status.ts  use-flatpak-update.ts  use-friends-active-mods.ts  use-friends.ts  use-game-presence-status.ts  use-global-audio.ts  use-global-shortcuts.ts  use-hardware-id.ts  use-heartbeat.ts  use-hero-detection.ts  use-hero.ts  use-ingest-tool-init.ts  use-install-with-collection.ts  (+42 more)
apps/desktop/src/lib/: api-client.ts  api.ts  app-version-display.test.ts  app-version-display.ts  client.ts  config.ts  constants.ts  crosshair-import.ts  deadlock-api.ts  dropped-file-source.test.ts  dropped-file-source.ts  errors.ts  fetch.ts  file-patterns.ts  file-utils.ts  format-error.ts  foundry-default-skins.ts  foundry.ts  gameinfo-patcher.ts  http-error.ts  i18n.ts  logger.ts  markup-transform.tsx  nsfw-blur-display.test.ts  nsfw-blur-display.ts  open-url.ts  plugins.ts  proxy.ts  query-constants.ts  tauri-commands.ts  utils.ts  whats-new-versions.ts
apps/desktop/src/locales/: TRANSLATION_UPDATE_NEEDED.md  ar-SA.json  ar.json  be-BY.json  bg-BG.json  de-CH.json  de-DE.json  de.json  en.json  es-ES.json  es.json  fr-FR.json  fr.json  it-IT.json  ja-JP.json  ko-KR.json  ko.json  pl-PL.json  pt-BR.json  ru-RU.json  th-TH.json  tr-TR.json  tr.json  zh-CN.json  zh-TW.json
apps/desktop/src/pages/: add-mods.tsx  crosshairs.tsx  dashboard.tsx  debug.tsx  developer.tsx  downloads.tsx  favorites.tsx  foundry.tsx  game-presets.tsx  mod.tsx  mods.tsx  my-mods.tsx  plugin.tsx  servers.tsx  settings.tsx  splash.tsx
apps/desktop/src/plugins/: PLUGIN_SYSTEM_REVIEW.md  types.ts
apps/desktop/src/types/: add-mods.ts  backup.ts  foundry.ts  game-presets.ts  mods.ts  plugins.ts  profiles.ts  settings.ts  tauri.ts  theme-overrides.ts
(+1562 files in other folders)
