[package]
name = "deadlock-mod-manager"
version = "0.18.0"
description = "A mod manager for the Valve game Deadlock, built with Tauri, React, and TypeScript."
authors = ["stormix <contact@stormix.co>"]
license = "GPL-3.0"
repository = "https://github.com/deadlock-mod-manager/deadlock-mod-manager"
homepage = "https://github.com/deadlock-mod-manager/deadlock-mod-manager"
edition = "2024"


[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-http = "=2.5.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2.3"
tauri-plugin-store = "2.4"
tauri-plugin-fs = "2.4"
keyvalues-serde = "0.2"
regex = "1.12.3"
zip = "6.0.0"
tempfile = "3.27.0"
unrar = "0.5.8"
thiserror = "2.0.18"
sysinfo = { version = "0.37.2", features = ["windows"] }
tauri-plugin-log = "2.8"
log = "0.4"
tauri-plugin-process = "2.3"
sevenz-rust = "0.6.1"
tauri-plugin-sentry = "0.5.0"
steamlocate = "2.0.1"
tauri-plugin-deep-link = "2"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tauri-plugin-machine-uid = "0.1.3"
vpk-parser = { path = "../../../packages/vpk-parser" }
dmp-parser = { path = "../../../packages/dmp-parser" }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tauri-plugin-dialog = "2.7.0"
memchr = "2.8.0"
notify = "8.2.0"
discord-rich-presence = "0.2"
clap = { version = "4.6", features = ["derive"] }
urlencoding = "2.1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-ota-updater = "2.0.7"
tauri-plugin-clipboard-manager = "2"
ttf-parser = "0.24"

[dev-dependencies]
tempfile = "3.27.0"

# Optimized for bundle size. If you want faster builds comment out/delete this section.
[profile.release]
lto = true # Enable Link Time Optimization
opt-level = "s" # Optimize for size.
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort" # Abort on panic
strip = true # Automatically strip symbols from the binary.
debug = false

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }

[target.'cfg(windows)'.dependencies]
junction = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
